--- a/src/Layout/SideBar.css
+++ b/src/Layout/SideBar.css
@@ -9,7 +9,7 @@
 .side-nav {
 	font-size: 1.4rem;
 	list-style: none;
-	margin-top: 3.5rem; 
+	margin-top: 3.5rem;
 }
 
 @media only screen and (max-width: 56.25em) {
@@ -17,8 +17,8 @@
 		display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
-		margin: 0; 
-	} 
+		margin: 0;
+	}
 }
 
 @media only screen and (max-width: 31.25em) {
@@ -29,23 +29,23 @@
 }
 
 .side-nav__item {
-	position: relative; 
+	position: relative;
 }
 
 .side-nav__item:not(:last-child) {
-	margin-bottom: .5rem; 
+	margin-bottom: .5rem;
 }
 
 @media only screen and (max-width: 56.25em) {
 	.side-nav__item:not(:last-child) {
-		margin: 0; 
-	} 
+		margin: 0;
+	}
 }
 
 @media only screen and (max-width: 56.25em) {
 	.side-nav__item {
-		flex: 1; 
-	} 
+		flex: 1;
+	}
 }
 
 .side-nav__item::before {
@@ -59,18 +59,22 @@
 	transform: scaleY(0);
 	transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
 	transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
-	transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s; 
-}	
+	transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
+}
 
-.side-nav__item:hover::before, .side-nav__item--active::before {
+.side-nav__item:hover::before {
 	transform: scaleY(1);
-	width: 100%; 
+	width: 100%;
+}
+
+.side-nav__link--active {
+	background-color: var(--color-primary);
 }
 
 .side-nav__item:active::before {
-	background-color: var(--color-primary-light); 
+	background-color: var(--color-primary-light);
 }
-	
+
 .side-nav__link:link, .side-nav__link:visited {
 	color: var(--color-grey-light-1);
 	text-decoration: none;
@@ -82,28 +86,28 @@
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	align-items: center; 
+	align-items: center;
 }
 
 @media only screen and (max-width: 56.25em) {
 	.side-nav__link:link, .side-nav__link:visited {
 		justify-content: center;
-		padding: 2rem; 
-	} 
+		padding: 2rem;
+	}
 }
 
 @media only screen and (max-width: 37.5em) {
 	.side-nav__link:link, .side-nav__link:visited {
 		flex-direction: column;
-		padding: 1.5rem .5rem; 
-	} 
+		padding: 1.5rem .5rem;
+	}
 }
-	
+
 .side-nav__icon {
 	width: 1.75rem;
 	height: 1.75rem;
 	margin-right: 2rem;
-	fill: currentColor; 
+	fill: currentColor;
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -111,19 +115,19 @@
 		margin-right: 0;
 		margin-bottom: .7rem;
 		width: 1.5rem;
-		height: 1.5rem; 
-	} 
+		height: 1.5rem;
+	}
 }
 
 .legal {
 	font-size: 1.2rem;
 	color: var(--color-grey-light-4);
 	text-align: center;
-	padding: 2.5rem; 
+	padding: 2.5rem;
 }
 
 @media only screen and (max-width: 56.25em) {
 	.legal {
-		display: none; 
-	} 
+		display: none;
+	}
 }
