--- a/src/Layout/Layout.css
+++ b/src/Layout/Layout.css
@@ -21,11 +21,12 @@
 
 @media only screen and (max-width: 56.25em) {
 	.content {
-		flex-direction: column; 
-	} 
+		flex-direction: column;
+	}
 }
 
 .main {
 	background-color: #fff;
-	flex: 1; 
+	flex: 1;
+	align-items: center;
 }
